update project pages

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ title: Jamie Kwan | Experience Design & Strategy
 
 				<!-- PORTFOLIO ITEM -->
 				<li class="work-item exhibition">
-					<a href="#">
+					<a href="/bee-hotel">
 						<div class="work-image">
 							<img src="assets/images/projects/bee-hotel.jpg" alt="">
 						</div>
@@ -81,7 +81,7 @@ title: Jamie Kwan | Experience Design & Strategy
 
 				<!-- PORTFOLIO ITEM -->
 				<li class="work-item concept">
-					<a href="#">
+					<a href="/sensing-history">
 						<div class="work-image">
 							<img src="assets/images/projects/sensing-history.jpg" alt="">
 						</div>
@@ -146,7 +146,7 @@ title: Jamie Kwan | Experience Design & Strategy
 
 				<!-- PORTFOLIO ITEM -->
 				<li class="work-item exhibition">
-					<a href="#">
+					<a href="/creative-catalyst">
 						<div class="work-image">
 							<img src="assets/images/projects/creative-catalyst.jpg" alt="">
 						</div>
@@ -162,7 +162,7 @@ title: Jamie Kwan | Experience Design & Strategy
 
 				<!-- PORTFOLIO ITEM -->
 				<li class="work-item exhibition">
-					<a href="#">
+					<a href="/sandbox">
 						<div class="work-image">
 							<img src="assets/images/projects/sandbox.jpg" alt="">
 						</div>
@@ -178,7 +178,7 @@ title: Jamie Kwan | Experience Design & Strategy
 				
 				<!-- PORTFOLIO ITEM -->
 				<li class="work-item concept">
-					<a href="#">
+					<a href="/freeform">
 						<div class="work-image">
 							<img src="assets/images/projects/freeform.jpg" alt="">
 						</div>
@@ -194,7 +194,7 @@ title: Jamie Kwan | Experience Design & Strategy
 
 				<!-- PORTFOLIO ITEM -->
 				<li class="work-item concept">
-					<a href="#">
+					<a href="/ctgu">
 						<div class="work-image">
 							<img src="assets/images/projects/ctgu.jpg" alt="">
 						</div>
@@ -210,7 +210,7 @@ title: Jamie Kwan | Experience Design & Strategy
 
 				<!-- PORTFOLIO ITEM -->
 				<li class="work-item concept">
-					<a href="#">
+					<a href="cube-hotel">
 						<div class="work-image">
 							<img src="assets/images/projects/cube-hotel.jpg" alt="">
 						</div>
@@ -226,7 +226,7 @@ title: Jamie Kwan | Experience Design & Strategy
 
 				<!-- PORTFOLIO ITEM -->
 				<li class="work-item passion">
-					<a href="#">
+					<a href="china-study">
 						<div class="work-image">
 							<img src="assets/images/projects/china-study.jpg" alt="">
 						</div>
