update project pages

--- a/ctgu.html
+++ b/ctgu.html
@@ -1,42 +1,36 @@
 ---
 layout: portfolio
 title: CTGU Water Science Center
-featureimg: ctgu
-slogan: "Architecture for a Sublime Landscape."
-oneliner: "A campus masterplan that reflected new forms of interdisciplinary collaboration, while creating new public connections to the landscape and enhancing education around a new proposed hydro dam below."
-challenge: "Design a university complex that respects and preserves the natural landscape and water feature around it."
+color: "rgb(160,206,217)"
+oneliner: "How might we create a university complex that floats on water?"
 
 images:
-  - image_path: ../assets/projects/ctgu/1.jpg
+  - image_path: ../assets/images/projects/ctgu/1.jpg
     title: CTGU
-  - image_path: ../assets/projects/ctgu/3.jpg
+  - image_path: ../assets/images/projects/ctgu/3.jpg
     title: CTGU
-  - image_path: ../assets/projects/ctgu/5.jpg
+  - image_path: ../assets/images/projects/ctgu/5.jpg
     title: CTGU
-  - image_path: ../assets/projects/ctgu/9.jpg
+  - image_path: ../assets/images/projects/ctgu/9.jpg
     title: CTGU
-  - image_path: ../assets/projects/ctgu/4.jpg
+  - image_path: ../assets/images/projects/ctgu/4.jpg
     title: CTGU
-  - image_path: ../assets/projects/ctgu/2.jpg
+  - image_path: ../assets/images/projects/ctgu/2.jpg
     title: CTGU
-  - image_path: ../assets/projects/ctgu/10.jpg
+  - image_path: ../assets/images/projects/ctgu/10.jpg
     title: CTGU
-  - image_path: ../assets/projects/ctgu/12.jpg
+  - image_path: ../assets/images/projects/ctgu/12.jpg
     title: CTGU
-  - image_path: ../assets/projects/ctgu/13.jpg
+  - image_path: ../assets/images/projects/ctgu/13.jpg
     title: CTGU
 
-category: "Concept Masterplan"
 client: "China Three Gorges University"
 date: "May - June 2012"
-team: "Hilary Neal"
 
 ---
-<div class="col-md-8">
-  <p>A collaboration between Ryerson University and China Three Gorge's University's (CTGU), the project called on the master plan of their Water Science facilities in conjunction with the construction of a new hydro dam.</p>
+<p>A collaboration between Ryerson University and China Three Gorge's University's (CTGU), the project called on the master plan of their Water Science facilities in conjunction with the construction of a new hydro dam.</p>
 
-  <p>The design explores concepts in identity, landscape and interdisciplinary research. The academic departments are combined into one megastructure — a new reform towards cross-disciplinary innovation. Its minimal footprint creates new opportunities for public space on the water, intersecting academics and play. The natural wetland is maximized as an asset to the site, rather than an obstacle for development, allowing water to freely flow under the building. A system of mycofiltration (fungi as filters) embedded within the floating pedestrian walkways purifies urban run-off down the surrounding hill, before entering the campus waterways.</p>
+<p>The design explores concepts in identity, landscape and interdisciplinary research. The academic departments are combined into one megastructure — a new reform towards cross-disciplinary innovation. Its minimal footprint creates new opportunities for public space on the water, intersecting academics and play. The natural wetland is maximized as an asset to the site, rather than an obstacle for development, allowing water to freely flow under the building. A system of mycofiltration (fungi as filters) embedded within the floating pedestrian walkways purifies urban run-off down the surrounding hill, before entering the campus waterways.</p>
 
-  <p>This project was the culmination of travelling across Eastern and Northern China, as documented through <a href="/projects/china-study" target="_blank">sketching.</a></p>
-</div>
+<p>This project was the culmination of travelling across Eastern and Northern China, as documented through <a href="/projects/china-study" target="_blank">sketching.</a></p>
 
