--- a/freeform.html
+++ b/freeform.html
@@ -1,34 +1,29 @@
 ---
 layout: portfolio
 title: Free Form
-featureimg: freeform
-slogan: "Democratizing 3D Printing for the Masses."
-oneliner: "Equal parts creative tool, marketplace, and community. A digital product that pairs simple and familiar UI parametric modelling, to bring personalized 3D printing to the masses. FreeForm empowers the creation of meaningful 3D printed products."
-challenge: "Create a digital experience that bridges the gap between the general public and complex 3D printing."
+color: "rgb(141,177,171)"
+oneliner: "How might we democratize 3D printing and design?"
 
-category: "Experience Design"
-client: 
 date: "November 2014"
-team: "Josh Clavir, Greg Phillips"
 
 images:
-  - image_path: ../assets/projects/freeform/1.jpg
+  - image_path: ../assets/images/projects/freeform/1.jpg
     title: FreeForm
-  - image_path: ../assets/projects/freeform/3.jpg
+  - image_path: ../assets/images/projects/freeform/3.jpg
     title: FreeForm
-  - image_path: ../assets/projects/freeform/4.jpg
+  - image_path: ../assets/images/projects/freeform/4.jpg
     title: FreeForm
-  - image_path: ../assets/projects/freeform/2.jpg
+  - image_path: ../assets/images/projects/freeform/2.jpg
     title: FreeForm
-  - image_path: ../assets/projects/freeform/8.jpg
+  - image_path: ../assets/images/projects/freeform/8.jpg
     title: FreeForm
-  - image_path: ../assets/projects/freeform/7.jpg
+  - image_path: ../assets/images/projects/freeform/7.jpg
     title: FreeForm
-  - image_path: ../assets/projects/freeform/5.jpg
+  - image_path: ../assets/images/projects/freeform/5.jpg
     title: FreeForm
-  - image_path: ../assets/projects/freeform/9.jpg
+  - image_path: ../assets/images/projects/freeform/9.jpg
     title: FreeForm
-  - image_path: ../assets/projects/freeform/6.jpg
+  - image_path: ../assets/images/projects/freeform/6.jpg
     title: FreeForm
     
 ---
