--- a/sandbox.html
+++ b/sandbox.html
@@ -1,27 +1,26 @@
 ---
 layout: portfolio
 title: Augmented Reality Sandbox
-featureimg: sandbox
-slogan: "Creating a multisensory digital experience with kinetic sand."
-oneliner: "How do semantic interactions within educational installations support learning?"
-challenge: "Explore the impact of sensory and tangible interactions on STEM learning."
+color: "rgb(125,124,132)"
+
+oneliner: "How might nostalgic, playful interactions with digital media be utilized for teaching STEM topics?"
+
 
 images:
-  - image_path: ../assets/projects/sandbox/6.jpg
+  - image_path: ../assets/images/projects/sandbox/6.jpg
     title: AR Sandbox
-  - image_path: ../assets/projects/sandbox/5.jpg
+  - image_path: ../assets/images/projects/sandbox/5.jpg
     title: AR Sandbox
-  - image_path: ../assets/projects/sandbox/2.jpg
+  - image_path: ../assets/images/projects/sandbox/2.jpg
     title: AR Sandbox
-  - image_path: ../assets/projects/sandbox/1.jpg
+  - image_path: ../assets/images/projects/sandbox/1.jpg
     title: AR Sandbox
-  - image_path: ../assets/projects/sandbox/7.jpg
+  - image_path: ../assets/images/projects/sandbox/7.jpg
     title: AR Sandbox
 
-category: "Interactive Installation"
 client: "Ryerson University / TIFF Bell Lightbox"
 date: "April 2015"
-team: "Josh Clavir, Diana Ibranovic"
+
 ---
 <div class="col-md-8">
 <p>The AR Sandbox was originally created by Hiroshii Ishii out of the MIT Media Lab in 2002, and then made open-sourced by <a href="http://idav.ucdavis.edu/~okreylos/" target="_blank">Oliver Kreylos' lab</a> at UC Davis. Real-time topography is generated from the sand's surface, and projected directly onto the white sand — becoming a live, three-dimensional topographic map. We built this tabletop interface with the open-sourced data and software, as a pre-curser to potential adaptations for transmedia storytelling, tangible gaming, and visualizing urban community development potential. Referenced as part of my Masters research project, it was built as a means of observing embodied interactions within a STEM learning context, in an effort to understand how to similarly design multisensory interactives for a cultural history application.</p>
