--- a/sensing-history.html
+++ b/sensing-history.html
@@ -2,7 +2,7 @@
 layout: portfolio
 color: "rgb(72,44,61)"
 title: Sensing History
-oneliner: "A prototype exhibition that aimed to prompt the discovery of knowledge, and create the opportunities for the senses to play a role in learning through digital media."
+oneliner: "How might we create the multisensory opportunities to engage in a sense of discovery with storytelling through museum artifacts?"
 
 images:
   - image_path: ../assets/images/projects/sensing-history/d3.jpg
