--- a/cube-hotel.html
+++ b/cube-hotel.html
@@ -1,42 +1,38 @@
 ---
 layout: portfolio
 title: CUBE Hotel
-featureimg: cube-hotel
+color: "rgba(0,0,0,0.5)"
 slogan: "Radical Innovations in Hospitality."
-oneliner: "A modular structure that adapts to both the personal guest amenity requirements and the physical constraints of any given site. Deploy multi-unit complexes of personalized suites at the core of travel destinations."
-challenge: "What does the future of hospitality architecture look like? Design a radical concept for a 21st century hotel."
+oneliner: "How might deployable hotels adapt to any site condition or size, to create new travel experiences?"
+
 
 images:
-  - image_path: ../assets/projects/cube-hotel/2.jpg
+  - image_path: ../assets/images/projects/cube-hotel/2.jpg
     title: CUBE Hotel
-  - image_path: ../assets/projects/cube-hotel/4.jpg
+  - image_path: ../assets/images/projects/cube-hotel/4.jpg
     title: CUBE Hotel
-  - image_path: ../assets/projects/cube-hotel/5.jpg
+  - image_path: ../assets/images/projects/cube-hotel/5.jpg
     title: CUBE Hotel
-  - image_path: ../assets/projects/cube-hotel/6.jpg
+  - image_path: ../assets/images/projects/cube-hotel/6.jpg
     title: CUBE Hotel
-  - image_path: ../assets/projects/cube-hotel/11.jpg
+  - image_path: ../assets/images/projects/cube-hotel/11.jpg
     title: CUBE Hotel
-  - image_path: ../assets/projects/cube-hotel/7.jpg
+  - image_path: ../assets/images/projects/cube-hotel/7.jpg
     title: CUBE Hotel
-  - image_path: ../assets/projects/cube-hotel/8.jpg
+  - image_path: ../assets/images/projects/cube-hotel/8.jpg
     title: CUBE Hotel
-  - image_path: ../assets/projects/cube-hotel/9.jpg
+  - image_path: ../assets/images/projects/cube-hotel/9.jpg
     title: CUBE Hotel
-  - image_path: ../assets/projects/cube-hotel/3.jpg
+  - image_path: ../assets/images/projects/cube-hotel/3.jpg
     title: CUBE Hotel
-  - image_path: ../assets/projects/cube-hotel/10.jpg
+  - image_path: ../assets/images/projects/cube-hotel/10.jpg
     title: CUBE Hotel
 
-category: "Concept Design"
 client: "Radical Innovations in Hospitality Competition"
 date: "April 2013"
-team: "Ilda Hysa"
 
 ---
 
-<div class="col-md-8">
-  <p>The CUBE Hotel is a modular structure that adapts to both the personal guest amenity requirements and the physical constraints of any given site. It can be deployed in small configurations, or pieced together to form a multi-unit complex of personalized suites at the core of destinations.</p>
+<p>The CUBE Hotel is a modular structure that adapts to both the personal guest amenity requirements and the physical constraints of any given site. It can be deployed in small configurations, or pieced together to form a multi-unit complex of personalized suites at the core of destinations.</p>
 
-  <p>The CUBE Hotel attempts to redefine the way in which we think of ‘hospitality’. No more will a developer have to commit to a location where business is thriving one year and dwindling down the next. Through modular design, the CUBE Hotel adapts to the exact spatial needs of the guests as well as the spatial restrictions and conditions of its environment. A light-weight structure, it moves around on trucks, reconfiguring onto the newest popular place to travel - urban, natural, or in a remote uninhabitable location. Each unit integrates passive advertising in augmented reality with renewable energy sources for the hotel.</p>
-</div>
+<p>The CUBE Hotel attempts to redefine the way in which we think of ‘hospitality’. No more will a developer have to commit to a location where business is thriving one year and dwindling down the next. Through modular design, the CUBE Hotel adapts to the exact spatial needs of the guests as well as the spatial restrictions and conditions of its environment. A light-weight structure, it moves around on trucks, reconfiguring onto the newest popular place to travel - urban, natural, or in a remote uninhabitable location. Each unit integrates passive advertising in augmented reality with renewable energy sources for the hotel.</p>
