--- a/data-doodles.html
+++ b/data-doodles.html
@@ -1,38 +1,35 @@
 ---
 layout: portfolio
 title: Data Doodles
-featureimg: data-doodles
-slogan: A Project in Data Reflection.
-oneliner: "Recording, reflecting, and sharing a year of life, in the form of weekly hand-drawn data visualizations. These are those visual stories."
-challenge: "Based on a weekly theme, create visual stories from around, within, and between the data points of your everyday life."
+color: "rgb(143,57,133)"
+
+oneliner: "How might data visualization be used to tell the mundane, in-between, everyday stories of our lives?"
 
 images:
-  - image_path: ../assets/projects/data-doodles/DataDoodle.jpg
+  - image_path: ../assets/images/projects/data-doodles/DataDoodle.jpg
     title: Data Doodles
-  - image_path: ../assets/projects/data-doodles/DataDoodle2.jpg
+  - image_path: ../assets/images/projects/data-doodles/DataDoodle2.jpg
     title: Data Doodles
-  - image_path: ../assets/projects/data-doodles/DataDoodle4.jpg
+  - image_path: ../assets/images/projects/data-doodles/DataDoodle4.jpg
     title: Data Doodles
-  - image_path: ../assets/projects/data-doodles/DataDoodle6.jpg
+  - image_path: ../assets/images/projects/data-doodles/DataDoodle6.jpg
     title: Data Doodles
-  - image_path: ../assets/projects/data-doodles/DataDoodle8.jpg
+  - image_path: ../assets/images/projects/data-doodles/DataDoodle8.jpg
     title: Data Doodles
-  - image_path: ../assets/projects/data-doodles/DataDoodle10.jpg
+  - image_path: ../assets/images/projects/data-doodles/DataDoodle10.jpg
     title: Data Doodles
-  - image_path: ../assets/projects/data-doodles/DataDoodle12.jpg
+  - image_path: ../assets/images/projects/data-doodles/DataDoodle12.jpg
     title: Data Doodles
-  - image_path: ../assets/projects/data-doodles/DataDoodle14.jpg
+  - image_path: ../assets/images/projects/data-doodles/DataDoodle14.jpg
     title: Data Doodles
-  - image_path: ../assets/projects/data-doodles/DataDoodle16.jpg
+  - image_path: ../assets/images/projects/data-doodles/DataDoodle16.jpg
     title: Data Doodles
 
-category: "Passion Project"
 date: "Jan 2018 - present"
-team: "Zeynep Sen"
 
 ---
 <div class="col-md-8">
-	<p>This is a <a href="http://medium.com/data-doodles" target="_blank">journal of doodles</a> that capture a year of life for interdisciplinary designers, Zeynep Sen, Sally Chan, &amp; Jamie Kwan, as recorded in the moments of data that make up our lives. These are the stories between the lines of data; stories of living, of loving, of learning, and of letting go.</p>
+	<p>This is a <a href="http://medium.com/data-doodles" target="_blank">journal of doodles</a> that capture a year of life for interdisciplinary designers, Zeynep Sen &amp; Jamie Kwan, as recorded in the moments of data that make up our lives. These are the stories between the lines of data; stories of living, of loving, of learning, and of letting go.</p>
 
 	<p>For a year, we pledged to record and exchange data that made up a single week, resulting in 52 challenges each, in creatively visualizing our lives. We did this all in an effort to learn about data visualization, exercising sketching-just-for-fun, and in self-reflecting on our personal lives; drawing inspiration from Giorgia Lupi and Stefanie Posavec's award-winning project, <i>Dear Data</i>. </p>
 
