--- a/sandbox.html
+++ b/sandbox.html
@@ -19,9 +19,9 @@ images:
     title: AR Sandbox
 
 video:
-  - video_path: "https://player.vimeo.com/video/130944069"
-  - videoWidth: 640
-  - videoHeight: 360
+  - video_path: https://player.vimeo.com/video/130944069
+    videoWidth: 640
+    videoHeight: 360
 
 client: "Ryerson University / TIFF Bell Lightbox"
 date: "April 2015"
