--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ title: Jamie Kwan | Experience Design & Strategy
 						DESIGNER | STRATEGIST | STORYTELLER 
 						</div>
 
-						<h3>I believe that great experiences inspire play and curiosity.</h3>
+						<h3 class="font-alt">I believe that great experiences inspire play and curiosity.</h3>
 
 						<p>Armed with the tools of both an architect and a digital strategist, I am a passionate brand storyteller who is dedicated to crafting engaging human experiences in the real world. By seeing branded storytelling from both a spatial and a pixel scale, these crafted experiences prompt a strong sense of engagement through a holistic approach. I believe in applying the elements of storytelling and play to build stronger relationships through brand design in the real-world.</p>
 
