--- a/ad-astra.html
+++ b/ad-astra.html
@@ -2,6 +2,7 @@
 layout: portfolio
 color: "rgb(66,70,93)"
 title: Ad Astra
+id: ad-astra
 oneliner: "How might we transform a small lunchroom into a temporary night-time destination?"
 
 images:
