--- a/ad-astra.html
+++ b/ad-astra.html
@@ -8,16 +8,22 @@ oneliner: "How might we transform a small lunchroom into a temporary night-time 
 images:
   - image_path: ../assets/images/projects/ad-astra/5.jpg
     title: Ad Astra
+    id: ad-astra
   - image_path: ../assets/images/projects/ad-astra/3.jpg
     title: Ad Astra
+    id: ad-astra
   - image_path: ../assets/images/projects/ad-astra/6.jpg
     title: Ad Astra
+    id: ad-astra
   - image_path: ../assets/images/projects/ad-astra/1.jpg
     title: Ad Astra
+    id: ad-astra
   - image_path: ../assets/images/projects/ad-astra/2.jpg
     title: Ad Astra
+    id: ad-astra
   - image_path: ../assets/images/projects/ad-astra/4.jpg
     title: Ad Astra
+    id: ad-astra
 
 client: "Bata Shoe Museum / Nuit Blanche"
 date: "March - October 2013"
