--- a/ad-astra.html
+++ b/ad-astra.html
@@ -2,28 +2,22 @@
 layout: portfolio
 color: "rgb(66,70,93)"
 title: Ad Astra
-id: ad-astra
+featureimg: ad-astra
 oneliner: "How might we transform a small lunchroom into a temporary night-time destination?"
 
 images:
   - image_path: ../assets/images/projects/ad-astra/5.jpg
-    title: Ad Astra
-    id: ad-astra
+    title: Ad Astra 1
   - image_path: ../assets/images/projects/ad-astra/3.jpg
-    title: Ad Astra
-    id: ad-astra
+    title: Ad Astra 2
   - image_path: ../assets/images/projects/ad-astra/6.jpg
     title: Ad Astra
-    id: ad-astra
   - image_path: ../assets/images/projects/ad-astra/1.jpg
     title: Ad Astra
-    id: ad-astra
   - image_path: ../assets/images/projects/ad-astra/2.jpg
     title: Ad Astra
-    id: ad-astra
   - image_path: ../assets/images/projects/ad-astra/4.jpg
     title: Ad Astra
-    id: ad-astra
 
 client: "Bata Shoe Museum / Nuit Blanche"
 date: "March - October 2013"
