--- a/ad-astra.html
+++ b/ad-astra.html
@@ -18,6 +18,7 @@ images:
   - image_path: ../assets/images/projects/ad-astra/4.jpg
     title: Ad Astra
 
+category: Exhibit, Art Installation
 client: "Bata Shoe Museum / Nuit Blanche"
 date: "March - October 2013"
 
