add fade to subheading

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Jamie Kwan | Experience Design & Strategy
 
 		<div class="hs-caption container col-xl-8 col-xl-offset-2">
 			<div class="caption-content">
-				<div class="hs-title-size-1 font-inc text-uppercase m-b-20">
+				<div class="hs-title-size-1 font-inc text-uppercase m-b-20 wow fadeInUp" data-wow-delay="0.4s">
 					Hi, my name is Jamie.
 				</div>
 				<div class="hs-title-size-3 font-alt">
