--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ title: Jamie Kwan | Experience Design & Strategy
 
 				<!-- PORTFOLIO ITEM -->
 				<li class="work-item passion">
-					<a href="http://www.studiobud.ca/" target="_blank">
+					<a href="https://www.studiobud.ca/" target="_blank">
 						<div class="work-image">
 							<img src="assets/images/projects/studiobud.jpg" alt="">
 						</div>
