--- a/about.html
+++ b/about.html
@@ -3,3 +3,108 @@ layout: default
 title: Jamie Kwan | About
 ---
 
+<!-- HOME -->
+		<section class="module module-header bg-dark bg-dark-50" data-background="assets/images/section-5.jpg">
+
+			<div class="container">
+
+				<!-- MODULE TITLE -->
+				<div class="row">
+
+					<div class="col-sm-6 col-sm-offset-3">
+
+						<h1 class="module-title font-alt align-center">About</h1>
+
+						<div class="module-subtitle font-inc align-center">
+							A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart.
+						</div>
+
+					</div>
+
+				</div>
+				<!-- /MODULE TITLE -->
+
+			</div>
+
+		</section >
+		<!-- /HOME -->
+
+		<!-- ABOUT -->
+		<section class="module">
+
+			<div class="container">
+
+				<!-- MODULE TITLE -->
+				<div class="row">
+
+					<div class="col-sm-6">
+
+						<h2 class="module-title font-alt">Info</h2>
+
+						<div class="module-subtitle font-inc">
+							A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart.
+						</div>
+
+					</div>
+
+				</div>
+				<!-- /MODULE TITLE -->
+
+				<div class="row">
+
+					<!-- ABOUT CONTENT -->
+					<div class="col-sm-6">
+
+						<p>The languages only differ in their grammar, their pronunciation and their most common words. Everyone realizes why a new common language would be desirable: one could refuse to pay expensive translators.</p>
+
+						<p>To achieve this, it would be necessary to have uniform grammar, pronunciation and more common words. If several languages coalesce, the grammar of the resulting language is more simple and regular than that of the individual languages.</p>
+
+						<ul class="social-list">
+							<li><a href="#"><span class="icon-facebook"></span></a></li>
+							<li><a href="#"><span class="icon-twitter"></span></a></li>
+							<li><a href="#"><span class="icon-googleplus"></span></a></li>
+						</ul>
+
+					</div>
+					<!-- /ABOUT CONTENT -->
+
+					<!-- SKILLS -->
+					<div class="col-sm-6">
+
+						<h5 class="progress-title font-inc">Development</h5>
+						<div class="progress">
+							<div class="progress-bar pb-dark" aria-valuenow="60" role="progressbar" aria-valuemin="0" aria-valuemax="100">
+								<span class="font-inc"></span>
+							</div>
+						</div>
+
+						<h5 class="progress-title font-inc">Branding</h5>
+						<div class="progress">
+							<div class="progress-bar pb-dark" aria-valuenow="80" role="progressbar" aria-valuemin="0" aria-valuemax="100">
+								<span class="font-inc"></span>
+							</div>
+						</div>
+
+						<h5 class="progress-title font-inc">Marketing</h5>
+						<div class="progress">
+							<div class="progress-bar pb-dark" aria-valuenow="50" role="progressbar" aria-valuemin="0" aria-valuemax="100">
+								<span class="font-inc"></span>
+							</div>
+						</div>
+
+						<h5 class="progress-title font-inc">Photography</h5>
+						<div class="progress">
+							<div class="progress-bar pb-dark" aria-valuenow="90" role="progressbar" aria-valuemin="0" aria-valuemax="100">
+								<span class="font-inc"></span>
+							</div>
+						</div>
+
+					</div>
+					<!-- /SKILLS -->
+
+				</div>
+
+			</div>
+
+		</section >
+		<!-- /ABOUT -->
