--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@ title: Jamie Kwan | About
 						<h1 class="module-title font-alt align-center">About</h1>
 
 						<div class="module-subtitle font-inc align-center">
-							A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart.
+							I'm a big believer in the strength of storytelling and the power of play. Stories provide the context and backdrop to enriching an experience of the built environment. Play invites you into shaping the experience to make it your own.
 						</div>
 
 					</div>
