--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@ title: Jamie Kwan | About
 ---
 
 <!-- HOME -->
-		<section class="module module-header bg-dark bg-dark-50" data-background="assets/images/section-5.jpg">
+		<section class="module module-header bg-dark bg-dark-50" data-background="assets/images/background/dmitri-popov-69420-unsplash.jpg">
 
 			<div class="container">
 
@@ -16,7 +16,7 @@ title: Jamie Kwan | About
 						<h1 class="module-title font-alt align-center">About</h1>
 
 						<div class="module-subtitle font-inc align-center">
-							<strong>I'm a big believer in the strength of storytelling and the power of play. </strong><br>Stories provide the context and backdrop to enriching an experience of the built environment. Play invites you into shaping the experience to make it your own.
+							<strong>I'm a big believer in the strength of storytelling and the power of play. </strong>Stories provide the lens into experiencing the built environment. Play invites you into shaping the experience to make it your own, by breaking all the rules.
 						</div>
 
 					</div>
@@ -39,11 +39,7 @@ title: Jamie Kwan | About
 
 					<div class="col-sm-6">
 
-						<h2 class="module-title font-alt">Info</h2>
-
-						<div class="module-subtitle font-inc">
-							A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart.
-						</div>
+						<h2 class="module-title font-alt">My Story</h2>
 
 					</div>
 
@@ -55,9 +51,7 @@ title: Jamie Kwan | About
 					<!-- ABOUT CONTENT -->
 					<div class="col-sm-6">
 
-						<p>The languages only differ in their grammar, their pronunciation and their most common words. Everyone realizes why a new common language would be desirable: one could refuse to pay expensive translators.</p>
-
-						<p>To achieve this, it would be necessary to have uniform grammar, pronunciation and more common words. If several languages coalesce, the grammar of the resulting language is more simple and regular than that of the individual languages.</p>
+						<p>Armed with the tools of both an architect and a digital strategist, I am a passionate brand storyteller who is dedicated to crafting engaging human experiences in the real world. By seeing branded storytelling from both a spatial and a pixel scale, these crafted experiences prompt a strong sense of engagement through a holistic approach. I believe in applying the elements of storytelling and play to build stronger relationships through brand design in the real-world.</p>
 
 						<ul class="social-list">
 							<li><a href="#"><span class="icon-facebook"></span></a></li>
