--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@ title: Jamie Kwan | About
 
 					<div class="col-sm-6 col-sm-offset-3">
 
-						<h1 class="module-title font-alt align-center">About</h1>
+						<h1 class="module-title font-alt align-center">My Story</h1>
 
 						<div class="module-subtitle font-inc align-center">
 							<strong>I'm a big believer in the strength of storytelling and the power of play. </strong>Stories provide the lens into experiencing the built environment. Play invites you into shaping the experience to make it your own, by breaking all the rules.
@@ -39,7 +39,7 @@ title: Jamie Kwan | About
 
 					<div class="col-sm-6">
 
-						<h2 class="module-title font-alt">My Story</h2>
+						<h2 class="module-title font-alt">About</h2>
 
 					</div>
 
@@ -51,12 +51,18 @@ title: Jamie Kwan | About
 					<!-- ABOUT CONTENT -->
 					<div class="col-sm-6">
 
-						<p>Armed with the tools of both an architect and a digital strategist, I am a passionate brand storyteller who is dedicated to crafting engaging human experiences in the real world. By seeing branded storytelling from both a spatial and a pixel scale, these crafted experiences prompt a strong sense of engagement through a holistic approach. I believe in applying the elements of storytelling and play to build stronger relationships through brand design in the real-world.</p>
+						<p>Hi, I'm Jamie. I'm a designer, a strategist, and a storyteller that's passionate about creating joyful, playful, and enriching experiences.</p>
+
+						<p>I'm currently designing human-centered research and developing strategic brand experiences at <a href="https://www.gensler.com">Gensler</a>,in Toronto. Prior, I was a Designer in <a href="https://www.forrec.com">FORREC</a>'s Creative Studio, designing stories that lived in theme parks and visitor attractions, and developing concepts for technology-driven entertainment experiences. Professionally, some of my client work so far has included: the Toronto International Film Festival, the Panama Canal Authority, Hong Kong International Airport, AS Roma, and Cineplex Entertainment.</p>
+
+						<p>I'm trained as an architect, and, in 2015, I completed a Masters in Digital Media with a specialization in Human-Computer Interaction&mdash;researching how digital media can live in the built world through narrative-driven architecture.</p>
+
+						<p>Interested in learning more about me? I'm almost always down to grab coffee and chat. Here's how you can reach me.</p>
 
 						<ul class="social-list">
-							<li><a href="#"><span class="icon-facebook"></span></a></li>
-							<li><a href="#"><span class="icon-twitter"></span></a></li>
-							<li><a href="#"><span class="icon-googleplus"></span></a></li>
+							<li><a href="https://www.twitter.com/jamiemkwan"><span class="icon-twitter"></span></a></li>
+							<li><a href="https://www.linkedin.com/in/jamiemkwan"><span class="icon-linkedin"></span></a></li>
+							<li><a href="mailto:jamie@studiobud.ca?subject=Hello!"><span class="icon-envelope"></span></a></li>
 						</ul>
 
 					</div>
@@ -65,32 +71,37 @@ title: Jamie Kwan | About
 					<!-- SKILLS -->
 					<div class="col-sm-6">
 
-						<h5 class="progress-title font-inc">Development</h5>
+						<div class="module-subtitle font-inc">
+						Here's how I like to spend my day:
+						</div>
+
+						<h5 class="progress-title font-inc">Doodling</h5>
 						<div class="progress">
-							<div class="progress-bar pb-dark" aria-valuenow="60" role="progressbar" aria-valuemin="0" aria-valuemax="100">
+							<div class="progress-bar pb-dark" aria-valuenow="45" role="progressbar" aria-valuemin="0" aria-valuemax="100">
 								<span class="font-inc"></span>
 							</div>
 						</div>
 
-						<h5 class="progress-title font-inc">Branding</h5>
+						<h5 class="progress-title font-inc">Writing</h5>
 						<div class="progress">
-							<div class="progress-bar pb-dark" aria-valuenow="80" role="progressbar" aria-valuemin="0" aria-valuemax="100">
+							<div class="progress-bar pb-dark" aria-valuenow="45" role="progressbar" aria-valuemin="0" aria-valuemax="100">
 								<span class="font-inc"></span>
 							</div>
 						</div>
 
-						<h5 class="progress-title font-inc">Marketing</h5>
+						<h5 class="progress-title font-inc">Being curious</h5>
 						<div class="progress">
-							<div class="progress-bar pb-dark" aria-valuenow="50" role="progressbar" aria-valuemin="0" aria-valuemax="100">
+							<div class="progress-bar pb-dark" aria-valuenow="10" role="progressbar" aria-valuemin="0" aria-valuemax="100">
 								<span class="font-inc"></span>
 							</div>
 						</div>
 
-						<h5 class="progress-title font-inc">Photography</h5>
+						<h5 class="progress-title font-inc">Something weird, random (read: "<a href="https://medium.com/design-on-the-mind/the-creativity-happy-hour-e82fb7ff9e4d" target="_blank">Passion Projects*"</a>)</h5>
 						<div class="progress">
-							<div class="progress-bar pb-dark" aria-valuenow="90" role="progressbar" aria-valuemin="0" aria-valuemax="100">
+							<div class="progress-bar pb-dark" aria-valuenow="25" role="progressbar" aria-valuemin="0" aria-valuemax="100">
 								<span class="font-inc"></span>
 							</div>
+							<p><i>*My favourite childhood teacher once taught me, <a href="https://www.youtube.com/watch?v=pit3p1iABmg">"Take chances, make mistakes, get messy"</a></i></p>
 						</div>
 
 					</div>
