--- a/about.html
+++ b/about.html
@@ -77,14 +77,14 @@ title: Jamie Kwan | About
 
 						<h5 class="progress-title font-inc">Doodling</h5>
 						<div class="progress">
-							<div class="progress-bar pb-dark" aria-valuenow="45" role="progressbar" aria-valuemin="0" aria-valuemax="100">
+							<div class="progress-bar pb-dark" aria-valuenow="40" role="progressbar" aria-valuemin="0" aria-valuemax="100">
 								<span class="font-inc"></span>
 							</div>
 						</div>
 
 						<h5 class="progress-title font-inc">Writing</h5>
 						<div class="progress">
-							<div class="progress-bar pb-dark" aria-valuenow="45" role="progressbar" aria-valuemin="0" aria-valuemax="100">
+							<div class="progress-bar pb-dark" aria-valuenow="30" role="progressbar" aria-valuemin="0" aria-valuemax="100">
 								<span class="font-inc"></span>
 							</div>
 						</div>
@@ -96,14 +96,14 @@ title: Jamie Kwan | About
 							</div>
 						</div>
 
-						<h5 class="progress-title font-inc">Something weird, random (read: "<a href="https://medium.com/design-on-the-mind/the-creativity-happy-hour-e82fb7ff9e4d" target="_blank">Passion Projects*"</a>)</h5>
+						<h5 class="progress-title font-inc">Something wonderfully weird (read: "<a href="https://medium.com/design-on-the-mind/the-creativity-happy-hour-e82fb7ff9e4d" target="_blank">Passion Projects*"</a>)</h5>
 						<div class="progress">
-							<div class="progress-bar pb-dark" aria-valuenow="25" role="progressbar" aria-valuemin="0" aria-valuemax="100">
+							<div class="progress-bar pb-dark" aria-valuenow="20" role="progressbar" aria-valuemin="0" aria-valuemax="100">
 								<span class="font-inc"></span>
 							</div>
-							<p><i>*My favourite childhood teacher once taught me, <a href="https://www.youtube.com/watch?v=pit3p1iABmg">"Take chances, make mistakes, get messy"</a></i></p>
+							
 						</div>
-
+						<br><p><i>*My favourite childhood teacher once taught me, <a href="https://www.youtube.com/watch?v=pit3p1iABmg">"Take chances, make mistakes, get messy"</a></i></p>
 					</div>
 					<!-- /SKILLS -->
 
