--- a/about.html
+++ b/about.html
@@ -51,9 +51,9 @@ title: Jamie Kwan | About
 					<!-- ABOUT CONTENT -->
 					<div class="col-sm-6">
 
-						<p>Hi, I'm Jamie. I'm a designer, a strategist, and a storyteller that's passionate about creating joyful, playful, and enriching experiences.</p>
+						<p><strong>Hi, I'm Jamie. I'm a designer, a strategist, and a storyteller that's passionate about creating joyful, playful, and enriching experiences.</strong></p>
 
-						<p>I'm currently designing human-centered research and developing strategic brand experiences at <a href="https://www.gensler.com">Gensler</a>,in Toronto. Prior, I was a Designer in <a href="https://www.forrec.com">FORREC</a>'s Creative Studio, designing stories that lived in theme parks and visitor attractions, and developing concepts for technology-driven entertainment experiences. Professionally, some of my client work so far has included: the Toronto International Film Festival, the Panama Canal Authority, Hong Kong International Airport, AS Roma, and Cineplex Entertainment.</p>
+						<p>I'm currently designing human-centered research and developing strategic brand experiences at <a href="https://www.gensler.com">Gensler</a>, in Toronto. Prior, I was a Designer in <a href="https://www.forrec.com">FORREC</a>'s Creative Studio, designing stories that lived in theme parks and visitor attractions, and developing concepts for technology-driven entertainment experiences. Professionally, some of my client work so far has included: the Toronto International Film Festival, the Panama Canal Authority, Hong Kong International Airport, AS Roma, and Cineplex Entertainment.</p>
 
 						<p>I'm trained as an architect, and, in 2015, I completed a Masters in Digital Media with a specialization in Human-Computer Interaction&mdash;researching how digital media can live in the built world through narrative-driven architecture.</p>
 
@@ -81,6 +81,8 @@ title: Jamie Kwan | About
 								<span class="font-inc"></span>
 							</div>
 						</div>
+						
+						<br>
 
 						<h5 class="progress-title font-inc">Writing</h5>
 						<div class="progress">
@@ -89,12 +91,16 @@ title: Jamie Kwan | About
 							</div>
 						</div>
 
+						<br>
+
 						<h5 class="progress-title font-inc">Being curious</h5>
 						<div class="progress">
 							<div class="progress-bar pb-dark" aria-valuenow="10" role="progressbar" aria-valuemin="0" aria-valuemax="100">
 								<span class="font-inc"></span>
 							</div>
 						</div>
+
+						<br>
 
 						<h5 class="progress-title font-inc">Something wonderfully weird (read: "<a href="https://medium.com/design-on-the-mind/the-creativity-happy-hour-e82fb7ff9e4d" target="_blank">Passion Projects*"</a>)</h5>
 						<div class="progress">
