--- a/about.html
+++ b/about.html
@@ -102,7 +102,7 @@ title: Jamie Kwan | About
 
 						<br>
 
-						<h5 class="progress-title font-inc">Something wonderfully weird (read: "<a href="https://medium.com/design-on-the-mind/the-creativity-happy-hour-e82fb7ff9e4d" target="_blank">Passion Projects*"</a>)</h5>
+						<h5 class="progress-title font-inc">Something wonderfully weird (read: "<a href="https://medium.com/design-on-the-mind/the-creativity-happy-hour-e82fb7ff9e4d" target="_blank">Passion Projects"</a>)</h5>
 						<div class="progress">
 							<div class="progress-bar pb-dark" aria-valuenow="20" role="progressbar" aria-valuemin="0" aria-valuemax="100">
 								<span class="font-inc"></span>
