test sub-sections of text

--- a/about.html
+++ b/about.html
@@ -53,17 +53,11 @@ title: Jamie Kwan | About
 
 						<p><strong>Hi, I'm Jamie. I'm a designer, a strategist, and a storyteller that's passionate about creating joyful, playful, and enriching experiences.</strong></p>
 
-						<p>I'm currently designing human-centered research and developing strategic brand experiences at <a href="https://www.gensler.com">Gensler</a>, in Toronto. Prior, I was a Designer in <a href="https://www.forrec.com">FORREC</a>'s Creative Studio, designing stories that lived in theme parks and visitor attractions, and developing concepts for technology-driven entertainment experiences. Professionally, some of my client work so far has included: the Toronto International Film Festival, the Panama Canal Authority, Hong Kong International Airport, AS Roma, and Cineplex Entertainment.</p>
+						<p>I'm currently designing human-centered research and developing strategic brand experiences at <a href="https://www.gensler.com">Gensler</a>, in Toronto.</p>
+
+						<p>Prior, I was a Designer in <a href="https://www.forrec.com">FORREC</a>'s Creative Studio, designing stories that lived in theme parks and visitor attractions, and developing concepts for technology-driven entertainment experiences. Professionally, some of my client work so far has included: the Toronto International Film Festival, the Panama Canal Authority, Hong Kong International Airport, AS Roma, Fairmont Hotels & Resorts, Burt's Bees, and Cineplex Entertainment.</p>
 
 						<p>I'm trained as an architect, and, in 2015, I completed a Masters in Digital Media with a specialization in Human-Computer Interaction&mdash;researching how digital media can live in the built world through narrative-driven architecture.</p>
-
-						<p>Interested in learning more about me? I'm almost always down to grab coffee and chat. Here's how you can reach me.</p>
-
-						<ul class="social-list">
-							<li><a href="https://www.twitter.com/jamiemkwan"><span class="icon-twitter"></span></a></li>
-							<li><a href="https://www.linkedin.com/in/jamiemkwan"><span class="icon-linkedin"></span></a></li>
-							<li><a href="mailto:jamie@studiobud.ca?subject=Hello!"><span class="icon-envelope"></span></a></li>
-						</ul>
 
 					</div>
 					<!-- /ABOUT CONTENT -->
@@ -74,6 +68,8 @@ title: Jamie Kwan | About
 						<div class="module-subtitle font-inc">
 						Here's how I like to spend my day:
 						</div>
+						
+						<br>
 
 						<h5 class="progress-title font-inc">Doodling</h5>
 						<div class="progress">
