--- a/ad-astra.html
+++ b/ad-astra.html
@@ -5,18 +5,22 @@ title: Ad Astra
 oneliner: "How might we transform a small lunchroom into a temporary night-time destination?"
 
 images:
-  - image_path: ../assets/images/projects/ad-astra/5.jpg
-    title: Ad Astra 1
-  - image_path: ../assets/images/projects/ad-astra/3.jpg
-    title: Ad Astra 2
-  - image_path: ../assets/images/projects/ad-astra/6.jpg
+  - image_path: ../assets/images/projects/ad-astra/4.jpg
     title: Ad Astra
   - image_path: ../assets/images/projects/ad-astra/1.jpg
     title: Ad Astra
   - image_path: ../assets/images/projects/ad-astra/2.jpg
     title: Ad Astra
-  - image_path: ../assets/images/projects/ad-astra/4.jpg
+    subtitle: Sic itur ad astra: 'thus you shall go to the stars'
+    story: "Visitors were invited to enter into the space — eight at a time – to explore. Open-ended interactions encouraged exploration, and upon discovery of "trigger" lights, the overall space responded with location-specific music and lighting changes in sync to the audio. Beyond the visual experience, Ad Astra turned small visitor interactions into large spatial responses."
+  - image_path: ../assets/images/projects/ad-astra/3.jpg
+    title: Ad Astra 
+  - image_path: ../assets/images/projects/ad-astra/6.jpg
     title: Ad Astra
+  - image_path: ../assets/images/projects/ad-astra/5.jpg
+    title: Ad Astra 
+    quote: ""Once inside the dreamlike (or was I just dreaming?) space, there was a sense of peacefulness amongst those enjoying the aesthetically pleasing, almost otherworldly void we found ourselves a part of.""
+    quote-cite: "RHYS MALE, ARTORONTO MAGAZINE"
 
 client: "Bata Shoe Museum / Nuit Blanche"
 date: "March - October 2013"
