--- a/ad-astra.html
+++ b/ad-astra.html
@@ -16,7 +16,7 @@ images:
   - image_path: ../assets/images/projects/ad-astra/6.jpg
     title: Ad Astra
   - image_path: ../assets/images/projects/ad-astra/5.jpg
-    title: Ad Astra
+    "caption-right": Ad Astra
 
 client: "Bata Shoe Museum / Nuit Blanche"
 date: "March - October 2013"
