--- a/about.html
+++ b/about.html
@@ -105,7 +105,7 @@ title: Jamie Kwan | About
 							</div>
 							
 						</div>
-						<br><p><i>*My favourite childhood teacher once taught me, <a href="https://www.youtube.com/watch?v=pit3p1iABmg">"Take chances, make mistakes, get messy"</a></i></p>
+						<br><p class="module-subtitle font-inc">*My favourite childhood teacher once taught me, <a href="https://www.youtube.com/watch?v=pit3p1iABmg">"Take chances, make mistakes, get messy"</a></p>
 					</div>
 					<!-- /SKILLS -->
 
