--- a/ad-astra.html
+++ b/ad-astra.html
@@ -9,6 +9,8 @@ images:
     title: Ad Astra
   - image_path: ../assets/images/projects/ad-astra/1.jpg
     title: Ad Astra
+    body-heading: "thus, you shall go to the stars"
+    body-text: "The room – approximately 20x20 feet in size – was filled with over 150 spherical lights, and clad from floor-to-ceiling in mirrored acrylic panels to create the impression of an infinite night sky. Visitors were invited to enter into the space — eight at a time – to explore. Open-ended interactions encouraged exploration, and upon discovery of "trigger" lights, the overall space responded with location-specific music and lighting changes in sync to the audio. Beyond the visual experience, Ad Astra turned small visitor interactions into large spatial responses."
   - image_path: ../assets/images/projects/ad-astra/2.jpg
     title: Ad Astra
   - image_path: ../assets/images/projects/ad-astra/3.jpg
@@ -17,8 +19,7 @@ images:
     title: Ad Astra
   - image_path: ../assets/images/projects/ad-astra/5.jpg
     caption-right: "a festival known for crowds and all-night adventures across the city. One of the core goals of the project was to create a simple"
-    body-heading: "thus, you shall go to the stars"
-    body-text: "Ad Astra was an interactive experience that immersed visitors into an infinite night sky and created a quiet — but highly memorable — retreat from a festival known for crowds and all-night adventures across the city. One of the core goals of the project was to create a simple, photogenic intervention that the general public could immerse themselves within, and as well, become an active participant in a collective experience."
+ 
 
 client: "Bata Shoe Museum / Nuit Blanche"
 date: "March - October 2013"
