add html styling

--- a/ad-astra.html
+++ b/ad-astra.html
@@ -7,10 +7,12 @@ oneliner: "How might we transform a small lunchroom into a temporary night-time 
 images:
   - image_path: ../assets/images/projects/ad-astra/4.jpg
     title: Ad Astra
+    
   - image_path: ../assets/images/projects/ad-astra/1.jpg
     title: Ad Astra
     body-heading: "thus, you shall go to the stars"
-    body-text: "The room – approximately 20x20 feet in size – was filled with over 150 spherical lights, and clad from floor-to-ceiling in mirrored acrylic panels to create the impression of an infinite night sky. Visitors were invited to enter into the space — eight at a time – to explore. Open-ended interactions encouraged exploration, and upon discovery of 'trigger' lights, the overall space responded with location-specific music and lighting changes in sync to the audio. Beyond the visual experience, Ad Astra turned small visitor interactions into large spatial responses."
+    body-text: "The room – approximately 20x20 feet in size – was filled with over 150 spherical lights, and clad from floor-to-ceiling in mirrored acrylic panels to create the impression of an infinite night sky. Visitors were invited to enter into the space — eight at a time – to explore. Open-ended interactions encouraged exploration, and upon discovery of 'trigger' lights, the overall space responded with location-specific music and lighting changes in sync to the audio. <strong>Beyond the visual experience, Ad Astra turned small visitor interactions into large spatial responses.</strong>"
+
   - image_path: ../assets/images/projects/ad-astra/2.jpg
     title: Ad Astra
   - image_path: ../assets/images/projects/ad-astra/3.jpg
