--- a/ad-astra.html
+++ b/ad-astra.html
@@ -7,7 +7,7 @@ oneliner: "How might we transform a small lunchroom into a temporary night-time 
 images:
   - image_path: ../assets/images/projects/ad-astra/4.jpg
     title: Ad Astra
-    
+
   - image_path: ../assets/images/projects/ad-astra/1.jpg
     title: Ad Astra
     body-heading: "thus, you shall go to the stars"
@@ -20,7 +20,7 @@ images:
   - image_path: ../assets/images/projects/ad-astra/6.jpg
     title: Ad Astra
   - image_path: ../assets/images/projects/ad-astra/5.jpg
-    caption-right: "a festival known for crowds and all-night adventures across the city. One of the core goals of the project was to create a simple"
+    caption-right: "Mirrored acrylic panels reflected the small volume of space into an infinite experience, inviting photo-ops and selfies."
  
 
 client: "Bata Shoe Museum / Nuit Blanche"
