--- a/ad-astra.html
+++ b/ad-astra.html
@@ -15,10 +15,14 @@ images:
 
   - image_path: ../assets/images/projects/ad-astra/2.jpg
     title: Ad Astra
+
   - image_path: ../assets/images/projects/ad-astra/3.jpg
     title: Ad Astra 
+    caption-right: "Conductive paint paired with a capacitive sensor turned certain lights into triggers for an location-specific audio track."
+
   - image_path: ../assets/images/projects/ad-astra/6.jpg
     title: Ad Astra
+
   - image_path: ../assets/images/projects/ad-astra/5.jpg
     caption-right: "Mirrored acrylic panels reflected the small volume of space into an infinite experience, inviting photo-ops and selfies."
  
