--- a/ad-astra.html
+++ b/ad-astra.html
@@ -12,6 +12,8 @@ images:
     title: Ad Astra
     body-heading: "thus, you shall go to the stars"
     body-text: "The room – approximately 20x20 feet in size – was filled with over 150 spherical lights, and clad from floor-to-ceiling in mirrored acrylic panels to create the impression of an infinite night sky. Visitors were invited to enter into the space — eight at a time – to explore. Open-ended interactions encouraged exploration, and upon discovery of 'trigger' lights, the overall space responded with location-specific music and lighting changes in sync to the audio. <strong>Beyond the visual experience, Ad Astra turned small visitor interactions into large spatial responses.</strong>"
+    quote: Once inside the dreamlike (or was I just dreaming?) space, there was a sense of peacefulness amongst those enjoying the aesthetically pleasing, almost otherworldly void we found ourselves a part of.
+    source: RHYS MALE, ARTORONTO MAGAZINE
 
   - image_path: ../assets/images/projects/ad-astra/2.jpg
     title: Ad Astra
