--- a/bee-hotel.html
+++ b/bee-hotel.html
@@ -5,37 +5,41 @@ title: Wild for Bees
 oneliner: "How might we use local art to educate, empower, and enrich the community in helping preserve wild bee health?"
 
 images:
-  - image_path: ../assets/images/projects/bee-hotel/2.JPG
-    title: Wild for Bees
-  - image_path: ../assets/images/projects/bee-hotel/3.jpg
-    title: Wild for Bees
-  - image_path: ../assets/images/projects/bee-hotel/4.jpg
-    title: Wild for Bees
-  - image_path: ../assets/images/projects/bee-hotel/5.JPG
-    title: Wild for Bees
-  - image_path: ../assets/images/projects/bee-hotel/9.JPG
-    title: Wild for Bees
-  - image_path: ../assets/images/projects/bee-hotel/6.JPG
-    title: Wild for Bees
-  - image_path: ../assets/images/projects/bee-hotel/7.jpg
-    title: Wild for Bees
   - image_path: ../assets/images/projects/bee-hotel/8.JPG
     title: Wild for Bees
+
+  - image_path: ../assets/images/projects/bee-hotel/9.JPG
+    title: Wild for Bees
+    
   - image_path: ../assets/images/projects/bee-hotel/10.jpg
     title: Wild for Bees
+    body-heading: "Design, build, inspire."
+    body-text: "As part of the SUSTAINABLE.TO team, I managed the design, build, and installation of the five bee hotels. Most structures were built in collaboration with youth from at-risk neighbourhoods, and travelled to local farmer's markets and events, such as 100in1Day, as part of the GTA-wide educational campaign. In some cases, the construction was integrated into a community workshop to invite the public into the campaign. S.TO was named the 2014 Pollinator Advocate for Canada, and a subsequent project, DIY Backyard Bee Hotels, was named the winner of the David Suzuki Foundation's Homegrown National Park Design Challenge."
+    quote: "Condos for bees are creating a buzz...Awareness is what this is all about. And following awareness, hopefully, is action."
+    source: Dave Le Blanc, Globe and Mail
+
+  - image_path: ../assets/images/projects/bee-hotel/2.JPG
+    title: Wild for Bees
+
+  - image_path: ../assets/images/projects/bee-hotel/3.jpg
+    title: Wild for Bees
+
+  - image_path: ../assets/images/projects/bee-hotel/4.jpg
+    title: Wild for Bees
+
+  - image_path: ../assets/images/projects/bee-hotel/5.JPG
+    title: Wild for Bees
+
+  - image_path: ../assets/images/projects/bee-hotel/6.JPG
+    title: Wild for Bees
+
+  - image_path: ../assets/images/projects/bee-hotel/7.jpg
+    title: Wild for Bees
+
+
 
 client: "Fairmont Hotel and Resorts, Pollinator Partnership Canada, and Burt's Bees"
 date: "June 2014"
 
 ---
 <p>Rapidly facing population decline, the bee hotels strengthen the urban ecology by providing nesting spaces for solitary bees. For the <a href="http://wildforbees.ca/" target="_blank">Wild for Bees campaign</a>, the five structures were sited across the Greater Toronto Area and built entirely from recycled urban material. The design intent created a site-specific aesthetic for the educational initiative centered on pollinator health. We wanted to show that bee habitats can be beautiful and easy to build in your own backyard!</p>
-
-<p>As part of the SUSTAINABLE.TO team, I managed the design, build, and installation of the five bee hotels. Most structures were built in collaboration with youth from at-risk neighbourhoods, and travelled to local farmer's markets and events, such as 100in1Day, as part of the GTA-wide educational campaign. In some cases, the construction was integrated into a community workshop to invite the public into the campaign.</p>
-
-<p> S.TO was named the 2014 Pollinator Advocate for Canada, and a subsequent project, DIY Backyard Bee Hotels, was named the winner of the David Suzuki Foundation's Homegrown National Park Design Challenge.</p>
-
-<p>
-<a href="http://www.theglobeandmail.com/life/home-and-garden/architecture/condos-for-bees-are-creating-a-buzz/article18989574/" target="_blank">"Condos for bees are creating a buzz"</a> (Globe and Mail, June 2014)<br>
-<a href="https://www.canadianarchitect.com/architecture/homegrown-design-challenge-winners-unveiled-diy-bee-hotels-and-an-alleyway-forest-for-toronto/1003159975/?er=NA" target="_blank">"DIY bee hotels and an alleyway forest for Toronto"</a> (Canadian Architect, July 2014)<br>
-</p>
-
