--- a/ad-astra.html
+++ b/ad-astra.html
@@ -11,7 +11,7 @@ images:
   - image_path: ../assets/images/projects/ad-astra/1.jpg
     title: Ad Astra
     body-heading: "thus, you shall go to the stars"
-    body-text: "The room – approximately 20x20 feet in size – was filled with over 150 spherical lights, and clad from floor-to-ceiling in mirrored acrylic panels to create the impression of an infinite night sky. Visitors were invited to enter into the space — eight at a time – to explore. Open-ended interactions encouraged exploration, and upon discovery of 'trigger' lights, the overall space responded with location-specific music and lighting changes in sync to the audio. <strong>Beyond the visual experience, Ad Astra turned small visitor interactions into large spatial responses.</strong>"
+    body-text: "The 20x20 foot room was filled with over 150 spherical lights, and clad from floor-to-ceiling in mirrored acrylic panels to create the impression of an infinite night sky. Eight at a time, visitors were invited to enter into the space to explore. Open-ended interactions encouraged exploration, and upon discovery of the eight hidden 'trigger' lights, the overall space responded with location-specific music and lighting changes in sync to the audio. <strong>Beyond the visual experience, Ad Astra turned small visitor interactions into large spatial responses.</strong>"
     quote: Once inside the dreamlike (or was I just dreaming?) space, there was a sense of peacefulness amongst those enjoying the aesthetically pleasing, almost otherworldly void we found ourselves a part of.
     source: RHYS MALE, ARTORONTO MAGAZINE
 
@@ -20,12 +20,13 @@ images:
 
   - image_path: ../assets/images/projects/ad-astra/3.jpg
     title: Ad Astra 
-    caption-right: "Conductive paint paired with a capacitive sensor turned certain lights into triggers for an location-specific audio track."
+    caption-right: "Conductive paint paired with a capacitive sensor turned certain lights into triggers for a location-specific audio track."
 
   - image_path: ../assets/images/projects/ad-astra/6.jpg
     title: Ad Astra
 
   - image_path: ../assets/images/projects/ad-astra/5.jpg
+    title: Ad Astra
     caption-right: "Mirrored acrylic panels reflected the small volume of space into an infinite experience, inviting photo-ops and selfies."
  
 
@@ -35,4 +36,4 @@ date: "March - October 2013"
 
 ---
 
-<p>Ad Astra was an interactive experience that immersed visitors into an infinite night sky and created a quiet — but highly memorable — retreat from a festival known for crowds and all-night adventures across the city. <span class="theme-color"><strong>One of the core goals of the project was to create a simple, photogenic intervention that the general public could immerse themselves within, and as well, become an active participant in a collective experience.</strong></span></p>
+<p>Ad Astra was an interactive experience that immersed visitors into an infinite night sky and created a quiet — but highly memorable — retreat from a festival known for crowds and all-night adventures across the city. <strong>One of the core goals of the project was to create a simple, photogenic intervention that the general public could immerse themselves within, and as well, become an active participant in a collective experience.</strong></p>
